Fix stretched logo

--- a/src/components/start-screen/StartScreen.css
+++ b/src/components/start-screen/StartScreen.css
@@ -23,8 +23,10 @@
     border-radius: 4px;
 }
 .login_box .logo{
-    width: 100%;
-    height: 130px;
+    height: 140px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     background: #f0f0f0;
     margin-top: 20px;
 }
